# linmod

./: .coverage  .gitignore  README.md  ROADMAP.md  make-release.sh  notes.txt  pyproject.toml
.github/workflow/: test.yml
.github/workflows/: test.yml  todo.yml
linmod/: app.py  base.py  core.py  diagnostics.py  export.py  inference.py  plots.py  utils.py
linmod/diagnostics/: functional_form.py  heteroscedasticity.py  heteroscedasticity_mixin.py  mixin.py  normality.py  normality_mixin.py
linmod/evaluation/: crossval.py
linmod/model/glm/: base.py  links.py  logistics.py  poisson.py
linmod/model/robust/: base.py  inference.py  influence.py  robust_psi.py  se.py  summary.py
linmod/regularization/: elasticnet.py  lasso.py  ridge.py
linmod/stats/: gls.py  wls.py
linmod/transforms/: build.py  mixin.py
tests/: test_base_model.py
