[tool.poetry]
name = "linmod"
version = "0.1.0"
description = "Modular and transparent linear modeling toolkit in NumPy: OLS, WLS, Ridge, Lasso, inference, diagnostics, and export tools."
authors = ["Diogo Ribeiro <diogo_dj@hotmail.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/DiogoRibeiro7/linmod"
repository = "https://github.com/DiogoRibeiro7/linmod"
documentation = "https://github.com/DiogoRibeiro7/linmod/wiki"

keywords = [
    "linear regression",
    "statistics",
    "numpy",
    "ridge",
    "lasso",
    "inference",
    "diagnostics"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23"
scipy = "^1.9"
pandas = "^1.5"
matplotlib = "^3.6"
seaborn = "^0.12"
streamlit = "^1.25"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.6"
pytest = "^7.2"
black = "^22.10.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
